# ros2-challenge

./: README.md  maze_log.txt
install/: local_setup.sh  setup.sh
install/cg/share/cg/: package.dsv  package.sh
install/cg_interfaces/share/cg_interfaces/: local_setup.sh  package.dsv  package.sh
install/cg_solver/lib/cg_solver/: maze_solver
install/cg_solver/share/ament_index/resource_index/parent_prefix_path/: cg_solver
install/cg_solver/share/cg_solver/: local_setup.sh  package.dsv  package.sh
install/cg_solver/share/cg_solver/cmake/: cg_solverConfig.cmake
install/cg_teleop/share/cg_teleop/: package.dsv  package.sh
log/: latest_build
src/cg_solver/: CMakeLists.txt  package.xml
src/cg_solver/src/: mapear.cpp  solver.cpp
